# OpenCV4_Cpp_book

./: .gitignore
Chapter02/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  sample1.cpp
Chapter03/: CMakeLists.txt  Makefile  sample3.cpp
Chapter03/abel_eg_wb_trackbar/: CMakeLists.txt  main.cpp
Chapter04_histogramFilters/: CMakeLists.txt  cmake_install.cmake  main.cpp
Chapter05_Automated_Optical_Inspection_Segmentation_Detection/: CMakeLists.txt  Chapter5  Makefile
